# ErrorEstimation

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  ConfigElasticity.h  ConfigElasticity.hpp  Crack.geo  Crack.msh  Doxyfile  ErrorEstimationElasticity.cpp  ErrorEstimationElasticity.hpp  MainHybridH1EstimatorTest.hpp  New_main.cpp  README.md  TPZNewMixedPoisson.cpp  TPZNewMixedPoisson.h  TPZPressureProjection.cpp  TPZPressureProjection.h  quadmesh.geo  quadmesh.msh
AinsworthProposal/: CMakeLists.txt  ProblemConfig.h  README.md  RoadMap.md  TPZAPosterioriErrorEstimator.cpp  TPZAPosterioriErrorEstimator.h  TPZAinsworthErrorEstimator.cpp  TPZAinsworthErrorEstimator.h  TPZHybridHDivErrorEstimator.cpp  TPZHybridHDivErrorEstimator.h  main.cpp
Common/: CMakeLists.txt  ProblemConfig.h  TPZCreateMultiphysicsSpace.cpp  TPZCreateMultiphysicsSpace.h  TPZHDivErrorEstimateMaterial.cpp  TPZHDivErrorEstimateMaterial.h  TPZHDivErrorEstimatorH1.cpp  TPZHDivErrorEstimatorH1.h  TPZHybridHDivErrorEstimator.cpp  TPZHybridHDivErrorEstimator.h  TPZMFSolutionTransfer.cpp  TPZMFSolutionTransfer.h  TPZMHMHDivErrorEstimator.cpp  TPZMHMHDivErrorEstimator.h  TPZMHMHDivErrorEstimatorMaterial.cpp  TPZMHMHDivErrorEstimatorMaterial.h  TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.h  TPZMixedHdivErrorEstimate.cpp  TPZMixedHdivErrorEstimate.h  Tools.cpp  Tools.h  meshgen.cpp  meshgen.h
ErrorEstimation/: CMakeLists.txt  Cube.geo  ProblemConfig.cpp  ProblemConfig.h  Quad.geo  Quad.msh  Solution2.cpp  TPZCreateMesh.h  TPZCreateMultiphysicsSpace.cpp  TPZCreateMultiphysicsSpace.h  TPZDarcyMHMHDivErrorEstimator.cpp  TPZDarcyMHMHDivErrorEstimator.h  TPZElasticityErrorEstimator.cpp  TPZElasticityErrorEstimator.h  TPZElasticityMHMHDivErrorEstimator.cpp  TPZElasticityMHMHDivErrorEstimator.h  TPZHDivErrorEstimator.cpp  TPZHDivErrorEstimator.h  TPZHDivErrorEstimatorH1.cpp  TPZHDivErrorEstimatorH1.h  TPZHybridH1CreateH1Reconstruction.cpp  TPZHybridH1CreateH1Reconstruction.h  TPZHybridH1CreateHDivReconstruction.cpp  TPZHybridH1CreateHDivReconstruction.h  TPZHybridH1CreateRecMeshes.cpp  TPZHybridH1CreateRecMeshes.h  TPZHybridH1ErrorEstimator.cpp  TPZHybridH1ErrorEstimator.h  TPZHybridH1ReconstructionBase.cpp  TPZHybridH1ReconstructionBase.h  TPZHybridHDivErrorEstimator.cpp  TPZHybridHDivErrorEstimator.h  TPZMFSolutionTransfer.cpp  TPZMFSolutionTransfer.h  TPZMHMHDivErrorEstimator.cpp  TPZMHMHDivErrorEstimator.h  TPZMixedErrorEstimate.cpp  TPZMixedErrorEstimate.h  TPZMixedHdivErrorEstimate.cpp  TPZPostProcessError.cpp  (+5 more)
ErrorEstimation/Material/: CMakeLists.txt  TPZEEMatHybridH1ToH1.cpp  TPZEEMatHybridH1ToH1.h  TPZEEMatHybridH1ToHDiv.cpp  TPZEEMatHybridH1ToHDiv.h  TPZHDivErrorEstimateDarcyMaterial.cpp  TPZHDivErrorEstimateDarcyMaterial.h  TPZHDivErrorEstimateElasticityMaterial.cpp  TPZHDivErrorEstimateElasticityMaterial.h  TPZHDivErrorEstimateMaterial.cpp  TPZHDivErrorEstimateMaterial.h  TPZHybridH1ErrorEstimateMaterial.cpp  TPZHybridH1ErrorEstimateMaterial.h  TPZHybridH1HdivFluxRecMaterial.cpp  TPZHybridH1HdivFluxRecMaterial.h  TPZHybridH1PressureRecMaterial.cpp  TPZHybridH1PressureRecMaterial.h  TPZMHMHDivErrorEstimatorMaterial.cpp  TPZMHMHDivErrorEstimatorMaterial.h  TPZMatLaplacianHybrid.cpp  TPZMatLaplacianHybrid.h  TPZMixedHdivErrorEstimate.cpp  TPZMixedHdivErrorEstimate.h  TPZPressureProjection.cpp  TPZPressureProjection.h  TPZSteklovMaterial.cpp  TPZSteklovMaterial.h
ErrorEstimationHDiv/: BasicMesh  BasicMesh.geo  BasicMesh.msh  CMakeLists.txt  New_main.cpp  ProblemConfig.h  TPZHDivErrorEstimateMaterial.cpp  TPZHDivErrorEstimateMaterial.h  TPZHDivErrorEstimatorH1.cpp  TPZHDivErrorEstimatorH1.h  TPZHybridHDivErrorEstimator.cpp  TPZHybridHDivErrorEstimator.h  TPZHybridizeHDiv.cpp  TPZHybridizeHDiv.h  TPZMixedHdivErrorEstimate.cpp  TPZMixedHdivErrorEstimate.h  Tools.cpp  Tools.h  main.cpp  mainAdaptivity.cpp  mainHybridHDiv.cpp  mainMHM.cpp  mainNoHybrid.cpp  main_H1.cpp  main_HeteroPermeability.cpp
MHMEstimation/: CMakeLists.txt  ToolsMHM.cpp  ToolsMHM.h  main.cpp  meshgen.cpp
MHM_Maze/: CMakeLists.txt  TPZMHMHDivErrorEstimator.cpp  TPZMHMHDivErrorEstimator.h  mainMHMError.cpp  mainMaze.cpp
Meshes/: BasicMesh.geo  (+16 more)
Projects/: CMakeLists.txt
Projects/ErrorEstimationElasticity/: CMakeLists.txt  Output.h  Solver.cpp  TPZHybMixDiffMaterial.cpp  common_files.cp  common_files.h  main_Elasticity.cpp  main_HybridH1vsMixed.cpp
Projects/ErrorEstimationH1/: CMakeLists.txt  ProblemConfig.h  TPZMixedErrorEstimate.cpp  TPZMixedErrorEstimate.h  TPZPostProcessError.cpp  TPZPostProcessError.h  main.cpp
Projects/ErrorEstimationH1New/: CMakeLists.txt  TPZCreateMesh.cpp  TPZPostProcessError.cpp  main.cpp
Projects/ErrorEstimationHDiv/: CMakeLists.txt  New_main.cpp  main.cpp  mainAdaptivity.cpp  mainQuadMesh.cpp  mainSteklov.cpp  main_H1.cpp  main_HeteroPermeability.cpp
Projects/ErrorEstimationMHM/: CMakeLists.txt  MainJustFemElasticity.cpp  main.cpp  mainExampleMethods.cpp  main_CILAMCE.cpp  main_ElastPhil.cpp  main_Journal.cpp  main_MHM.cpp  main_RefSolValidation.cpp
Projects/ErrorH1HDiv/: CMakeLists.txt  ErrorH1HDiv.cpp  quadmesh.geo  quadmesh.msh
Projects/ErrorNaca/: CMakeLists.txt  ErrorNaca.cpp  NACA.msh  TPZMeshModeling.py  naca.msh  naca.py  tpznacaprofile.cpp  tpznacaprofile.h
Projects/ErrorNacaH1HDiv/: ErrorEstimation.code-workspace  ErrorNacaH1HDiv.cpp  naca.nb  naca.py  tpznacaprofile.cpp
Projects/HybridH1/: CMakeLists.txt  ForcingFunction.cpp  ForcingFunction.h  InputTreatment.cpp  InputTreatment.h  MainHybridH1EstimatorTest.cpp  MeshInit.cpp  MeshInit.h  Output.cpp  Output.h  Solver.cpp  Solver.h  TPZHybMixDiffMaterial.cpp  TPZHybMixDiffMaterial.h  main_HybMixDiff.cpp  main_HybridH1.cpp  main_HybridH1vsMixed.cpp  main_fluxError.cpp
Projects/MHM_Maze/: CMakeLists.txt  ConfigCasesMaze.h  Maze_common.cpp  Maze_common.h  mainMHMError.cpp  mainMaze.cpp  main_Maze.cpp  main_Maze_Steklov.cpp  main_Maze_Steklov_constant.cpp
PropostaMark/: CMakeLists.txt  ProblemConfig.h  TPZMarkErrorEstimation.cpp  TPZMarkErrorEstimation.h  esfera.geo  esfera.msh  main.cpp
UNISIM/: CMakeLists.txt  mainHdiv.cpp
(+67 files in other folders)
